--- a/style.css
+++ b/style.css
@@ -33,4 +33,63 @@ canvas {
     height:5.5%;
     top:50%;
     left: 78%;
-    border-radius: 
+    border-radius: 10px;
+    font-size:110%;
+}
+div{
+   position: absolute;
+   top:60%;
+   left:25%;
+   color: white;
+   width:50%;
+   font-size:120%;
+   z-index: 99911
+}
+
+[placeholder]{
+    text-align:center;
+    color:white;
+    font-size:20px;
+}
+
+input::-webkit-input-placeholder{
+    color:white;
+    font-size: 20px;
+    text-align:center;
+    z-index:9997
+}
+.button1 {
+    border: 2px solid #00008B;
+    background-color: rgba(255,255,255,0.9);
+    z-index:9996
+}
+
+.button1:hover {
+    background-color: rgba(248,147,29,0.9);
+    color: black;
+    z-index:9995
+}
+
+input::-webkit-input-placeholder { 
+color: #999; 
+-webkit-transition: color.5s; 
+} 
+input:focus::-webkit-input-placeholder, input:hover::-webkit-input-placeholder { 
+color: #c2c2c2; 
+-webkit-transition: color.5s; 
+border-block-color: orange;
+}
+
+
+h1 {
+    z-index: 9992;
+    color:#fff;
+    font-size: -webkit-xxx-large;
+    position: absolute;
+    text-align: center;
+    top: 30%;
+    width: 100%;
+    height:10%;
+    -webkit-text-stroke:1px #1d0fec;
+    text-shadow: 0 1px 0 hsl(174,5%,80%),                    0 2px 0 hsl(174,5%,75%),                    0 3px 0 hsl(174,5%,70%),                    0 4px 0 hsl(174,5%,66%),                    0 5px 0 hsl(174,5%,64%),                    0 6px 0 hsl(174,5%,62%),                    0 7px 0 hsl(174,5%,61%),                    0 8px 0 hsl(174,5%,60%),                       0 0 5px rgba(0,0,0,.05),                   0 1px 3px rgba(0,0,0,.2),                   0 3px 5px rgba(0,0,0,.2),                  0 5px 10px rgba(0,0,0,.2),                 0 10px 10px rgba(0,0,0,.2),                 0 20px 20px rgba(0,0,0,.3);
+}
