--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html,body{
     overflow: hidden;
     margin: 0;
-    background-color: #000;
+    background-color:#ffffff;
     width: 100%;
     z-index:9999;
     height: 100%;
