--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ p{
   color: orange;
   text-align: center;
 }
+a{
+  color: green;
+  text-align: center;
 html,body{
   background_color: white;
 }
