--- a/style.css
+++ b/style.css
@@ -17,21 +17,10 @@ html,body{
   -webkit-overflow-scrolling: touch;
 }
 
-.test::-webkit-scrollbar{
-  width: 10px;
-  height: 1px;
-}
-
-.test::-webkit-scrollbar-track{
-  box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
-  background: #ededed;
-  border-radius: 10px;
-}
-
 .demo::-webkit-scrollbar{
   diaplay:none;
 }
 
-div{
+.button{
   
 }
