--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 p{
-  color: orange;
+  color: blue;
   text-align: center;
 }
 
@@ -14,130 +14,4 @@ img{
 
 html,body{
   background_color: blue;
-  -webkit-overflow-scrolling: touch;
-}
-
-.demo::-webkit-scrollbar{
-  diaplay:none;
-}
-
-.button{
-  colour: blue;
-}
-
-
-/* 引入需要的字体 */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
-
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	font-family: 'Poppins', sans-serif;
-}
-
-body {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	min-height: 100vh;
-	flex-direction: column;
-}
-
-.box {
-	position: relative;
-	width: 380px;
-	height: 420px;
-	background: #1c1c1c;
-	border-radius: 8px;
-	overflow: hidden;
-}
-
-.box::before {
-	content: '';
-	z-index: 1;
-	position: absolute;
-	top: -50%;
-	left: -50%;
-	width: 380px;
-	height: 420px;
-	transform-origin: bottom right;
-	background: linear-gradient(0deg, transparent, #45f3ff, #45f3ff);
-	animation: animate 6s linear infinite;
-}
-
-.box::after {
-	content: '';
-	z-index: 1;
-	position: absolute;
-	top: -50%;
-	left: -50%;
-	width: 380px;
-	height: 420px;
-	transform-origin: bottom right;
-	background: linear-gradient(0deg, transparent, #45f3ff, #45f3ff);
-	animation: animate 6s linear infinite;
-	animation-delay: -3s;
-}
-
-@keyframes animate {
-	0% {
-		transform: rotate(0deg);
-.inputBox input:valid~span,
-.inputBox input:focus~span {
-	color: #45f3ff;
-	transform: translateX(0px) translateY(-34px);
-	font-size: 0.75em;
-}
-
-.inputBox i {
-	position: absolute;
-	left: 0;
-	bottom: 0;
-	width: 100%;
-	height: 2px;
-	background: #45f3ff;
-	border-radius: 4px;
-	overflow: hidden;
-	transition: 0.5s;
-	pointer-events: none;
-	z-index: 9;
-}
-
-.inputBox input:valid~i,
-.inputBox input:focus~i {
-	height: 44px;
-}
-
-.links {
-	display: flex;
-	justify-content: space-between;
-}
-
-.links a {
-	margin: 10px 0;
-	font-size: 0.75em;
-	color: #8f8f8f;
-	text-decoration: beige;
-}
-
-.links a:hover,
-.links a:nth-child(2) {
-	color: #45f3ff;
-}
-
-input[type="submit"] {
-	border: none;
-	outline: none;
-	padding: 11px 25px;
-	background: #45f3ff;
-	cursor: pointer;
-	border-radius: 4px;
-	font-weight: 600;
-	width: 100px;
-	margin-top: 10px;
-}
-
-input[type="submit"]:active {
-	opacity: 0.8;
 }
